--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,1 +1,20 @@
+@import "~bootstrap/dist/css/bootstrap.min";
+@import "~bootstrap/dist/css/bootstrap-theme.min";
 
+// Font-awesome
+@import "~font-awesome/scss/font-awesome";
+
+.navbar-default {
+  padding: 10px 0;
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14),
+    0 1px 18px 0 rgba(0, 0, 0, 0.12);
+
+  img {
+    height: 40px;
+  }
+}
+
+.content {
+  margin-top: 95px;
+}
