--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,9 @@
 @import "~bootstrap/dist/css/bootstrap.min";
 @import "~bootstrap/dist/css/bootstrap-theme.min";
 
+// DataTables
+@import "~datatables.net-bs/css/dataTables.bootstrap";
+
 // Font-awesome
 @import "~font-awesome/scss/font-awesome";
 
