Add select rows, update and delete

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import "~datatables.net-bs/css/dataTables.bootstrap";
 // DataTables
 @import "~datatables.net-responsive-bs/css/responsive.bootstrap.min";
+@import "~datatables.net-select-bs/css/select.bootstrap.min";
 // Font-awesome
 @import "~font-awesome/scss/font-awesome";
 
